Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105330

QHttpServer statusString map is missing a few of status codes

    XMLWordPrintable

Details

    • 115ca6cd92 (qt/qthttpserver/dev) c8194bbfc1 (qt/qthttpserver/6.4)
    • Foundation PM Prioritized

    Description

      qhttpserverresponder.cpp:42 statusString map is missing a few of the status code 'translations' e.g. UpgradeRequired, ImATeapot (and others), which results in segfault upon serving the request (qhttpserverresponder.cpp:374).

      • Add missing statusCode-string entries to the statusString map
      • add check  does stastusString map have the key before calling statusString.at() in writeStatusLine()

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kokujawa Konrad Kujawa (Inactive)
            kokujawa Konrad Kujawa (Inactive)
            Vladimir Minenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes