Fix QHttpServer statusString map missing status codes

Add missing statusCode-string entries to the statusString map,
add check whether the stastusString map has the key before calling
statusString.at() in writeStatusLine().

Fixes: QTBUG-105330
Pick-to: 6.4
Change-Id: I2366e74beb1c4394ed0318bc6e0862f18c5dbe58
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Ievgenii Meshcheriakov <ievgenii.meshcheriakov@qt.io>